[gd_scene load_steps=3 format=3 uid="uid://be031tnck4wex"]

[ext_resource type="Script" uid="uid://cpo0u82uep0el" path="res://scripts/model_container.gd" id="1_s60ld"]
[ext_resource type="PackedScene" uid="uid://bfvylhj2l1r48" path="res://nodes/field_window.tscn" id="2_yd5yx"]

[node name="ModelContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s60ld")

[node name="FieldButton" type="Button" parent="."]
layout_mode = 2
text = "Add field"

[node name="FieldWindow" parent="." instance=ExtResource("2_yd5yx")]
visible = false

[connection signal="pressed" from="FieldButton" to="." method="_on_field_button_pressed"]
